Adding semi uspervised option

--- a/Lucas - Testing new model outputs [with gst logits].ipynb
+++ b/Lucas - Testing new model outputs [with gst logits].ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,8 +59,10 @@
       " | > stats_path:\n",
       " | > hop_length:256\n",
       " | > win_length:1024\n",
-      "hi\n",
-      " > Using model: Tacotron2\n"
+      " > Using model: Tacotron2\n",
+      "Training with 2 speakers and 2 styles\n",
+      "Use style target = True\n",
+      "Use semi supervised = True\n"
      ]
     }
    ],
@@ -95,229 +97,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Tacotron2(\n",
-       "  (speaker_embedding): Embedding(2, 512)\n",
-       "  (embedding): Embedding(217, 512, padding_idx=0)\n",
-       "  (encoder): Encoder(\n",
-       "    (convolutions): ModuleList(\n",
-       "      (0): ConvBNBlock(\n",
-       "        (convolution1d): Conv1d(512, 512, kernel_size=(5,), stride=(1,), padding=(2,))\n",
-       "        (batch_normalization): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (dropout): Dropout(p=0.5, inplace=False)\n",
-       "        (activation): ReLU()\n",
-       "      )\n",
-       "      (1): ConvBNBlock(\n",
-       "        (convolution1d): Conv1d(512, 512, kernel_size=(5,), stride=(1,), padding=(2,))\n",
-       "        (batch_normalization): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (dropout): Dropout(p=0.5, inplace=False)\n",
-       "        (activation): ReLU()\n",
-       "      )\n",
-       "      (2): ConvBNBlock(\n",
-       "        (convolution1d): Conv1d(512, 512, kernel_size=(5,), stride=(1,), padding=(2,))\n",
-       "        (batch_normalization): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (dropout): Dropout(p=0.5, inplace=False)\n",
-       "        (activation): ReLU()\n",
-       "      )\n",
-       "    )\n",
-       "    (lstm): LSTM(512, 256, batch_first=True, bidirectional=True)\n",
-       "  )\n",
-       "  (decoder): Decoder(\n",
-       "    (prenet): Prenet(\n",
-       "      (linear_layers): ModuleList(\n",
-       "        (0): Linear(\n",
-       "          (linear_layer): Linear(in_features=80, out_features=256, bias=False)\n",
-       "        )\n",
-       "        (1): Linear(\n",
-       "          (linear_layer): Linear(in_features=256, out_features=256, bias=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (attention_rnn): LSTMCell(1792, 1024)\n",
-       "    (attention): OriginalAttention(\n",
-       "      (query_layer): Linear(\n",
-       "        (linear_layer): Linear(in_features=1024, out_features=128, bias=False)\n",
-       "      )\n",
-       "      (inputs_layer): Linear(\n",
-       "        (linear_layer): Linear(in_features=1536, out_features=128, bias=False)\n",
-       "      )\n",
-       "      (v): Linear(\n",
-       "        (linear_layer): Linear(in_features=128, out_features=1, bias=True)\n",
-       "      )\n",
-       "      (location_layer): LocationLayer(\n",
-       "        (location_conv1d): Conv1d(2, 32, kernel_size=(31,), stride=(1,), padding=(15,), bias=False)\n",
-       "        (location_dense): Linear(\n",
-       "          (linear_layer): Linear(in_features=32, out_features=128, bias=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (decoder_rnn): LSTMCell(2560, 1024)\n",
-       "    (linear_projection): Linear(\n",
-       "      (linear_layer): Linear(in_features=2560, out_features=560, bias=True)\n",
-       "    )\n",
-       "    (stopnet): Sequential(\n",
-       "      (0): Dropout(p=0.1, inplace=False)\n",
-       "      (1): Linear(\n",
-       "        (linear_layer): Linear(in_features=1584, out_features=1, bias=True)\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (postnet): Postnet(\n",
-       "    (convolutions): ModuleList(\n",
-       "      (0): ConvBNBlock(\n",
-       "        (convolution1d): Conv1d(80, 512, kernel_size=(5,), stride=(1,), padding=(2,))\n",
-       "        (batch_normalization): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (dropout): Dropout(p=0.5, inplace=False)\n",
-       "        (activation): Tanh()\n",
-       "      )\n",
-       "      (1): ConvBNBlock(\n",
-       "        (convolution1d): Conv1d(512, 512, kernel_size=(5,), stride=(1,), padding=(2,))\n",
-       "        (batch_normalization): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (dropout): Dropout(p=0.5, inplace=False)\n",
-       "        (activation): Tanh()\n",
-       "      )\n",
-       "      (2): ConvBNBlock(\n",
-       "        (convolution1d): Conv1d(512, 512, kernel_size=(5,), stride=(1,), padding=(2,))\n",
-       "        (batch_normalization): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (dropout): Dropout(p=0.5, inplace=False)\n",
-       "        (activation): Tanh()\n",
-       "      )\n",
-       "      (3): ConvBNBlock(\n",
-       "        (convolution1d): Conv1d(512, 512, kernel_size=(5,), stride=(1,), padding=(2,))\n",
-       "        (batch_normalization): BatchNorm1d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (dropout): Dropout(p=0.5, inplace=False)\n",
-       "        (activation): Tanh()\n",
-       "      )\n",
-       "      (4): ConvBNBlock(\n",
-       "        (convolution1d): Conv1d(512, 80, kernel_size=(5,), stride=(1,), padding=(2,))\n",
-       "        (batch_normalization): BatchNorm1d(80, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (dropout): Dropout(p=0.5, inplace=False)\n",
-       "        (activation): Identity()\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (gst_layer): GST(\n",
-       "    (encoder): ReferenceEncoder(\n",
-       "      (convs): ModuleList(\n",
-       "        (0): Conv2d(1, 32, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (1): Conv2d(32, 32, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (2): Conv2d(32, 64, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (4): Conv2d(64, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "        (5): Conv2d(128, 128, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
-       "      )\n",
-       "      (bns): ModuleList(\n",
-       "        (0): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (1): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (3): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (4): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "        (5): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      )\n",
-       "      (recurrence): GRU(256, 512, batch_first=True)\n",
-       "    )\n",
-       "    (style_token_layer): StyleTokenLayer(\n",
-       "      (attention): MultiHeadAttention(\n",
-       "        (W_query): Linear(in_features=512, out_features=512, bias=False)\n",
-       "        (W_key): Linear(in_features=512, out_features=512, bias=False)\n",
-       "        (W_value): Linear(in_features=512, out_features=512, bias=False)\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (linear_style_target_layer): Linear(in_features=512, out_features=2, bias=True)\n",
-       "  (coarse_decoder): Decoder(\n",
-       "    (prenet): Prenet(\n",
-       "      (linear_layers): ModuleList(\n",
-       "        (0): Linear(\n",
-       "          (linear_layer): Linear(in_features=80, out_features=256, bias=False)\n",
-       "        )\n",
-       "        (1): Linear(\n",
-       "          (linear_layer): Linear(in_features=256, out_features=256, bias=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (attention_rnn): LSTMCell(1792, 1024)\n",
-       "    (attention): OriginalAttention(\n",
-       "      (query_layer): Linear(\n",
-       "        (linear_layer): Linear(in_features=1024, out_features=128, bias=False)\n",
-       "      )\n",
-       "      (inputs_layer): Linear(\n",
-       "        (linear_layer): Linear(in_features=1536, out_features=128, bias=False)\n",
-       "      )\n",
-       "      (v): Linear(\n",
-       "        (linear_layer): Linear(in_features=128, out_features=1, bias=True)\n",
-       "      )\n",
-       "      (location_layer): LocationLayer(\n",
-       "        (location_conv1d): Conv1d(2, 32, kernel_size=(31,), stride=(1,), padding=(15,), bias=False)\n",
-       "        (location_dense): Linear(\n",
-       "          (linear_layer): Linear(in_features=32, out_features=128, bias=False)\n",
-       "        )\n",
-       "      )\n",
-       "    )\n",
-       "    (decoder_rnn): LSTMCell(2560, 1024)\n",
-       "    (linear_projection): Linear(\n",
-       "      (linear_layer): Linear(in_features=2560, out_features=560, bias=True)\n",
-       "    )\n",
-       "    (stopnet): Sequential(\n",
-       "      (0): Dropout(p=0.1, inplace=False)\n",
-       "      (1): Linear(\n",
-       "        (linear_layer): Linear(in_features=1584, out_features=1, bias=True)\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# Testing CrossEntropyLoss with ignore_index\n",
+    "from torch import nn\n",
+    "criterion_style = nn.CrossEntropyLoss(ignore_index = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = torch.FloatTensor([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Embedding(2, 512)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.speaker_embedding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 3, 512])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "size = (1, 3)\n",
     "test = torch.rand(size).type(torch.long)\n",
@@ -326,40 +174,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([2, 1, 512]) torch.Size([1, 2, 1, 2])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "size = (2, 50, 80)\n",
     "test = torch.rand(size).type(torch.float)\n",
-    "enc_out , style_embed, logits = model.gst_layer(test)\n",
-    "print(style_embed.shape, logits.shape)"
+    "enc_out , logits = model.gst_layer(test)\n",
+    "print(enc_out.shape, logits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([2, 512])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "enc_out.shape"
    ]
