Adding global cpqd_aux_files

--- a/cpqd_aux/cpqd_full/Normalizando o arquivo de texto.ipynb
+++ b/cpqd_aux/cpqd_full/Normalizando o arquivo de texto.ipynb
@@ -180,13 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['text'] = df['text'].str.lower().str.replace('.', ' .').str.replace(',', ' ,').str.replace('!', ' !').str.replace('?', ' ?').str.replace('\\n', '').str.replace('\\t', '').str.replace('''\"''', '')\n",
     "\n",
-    "df_train, df_val, speaker_id, speaker_id = train_test_split(df, df['emb_id'], test_size = 0.1, random_state = 42, stratify = df['emb_id'])\n"
+    "df_train, df_val, speaker_id, speaker_id = train_test_split(df, df['emb_id'], test_size = 0.01, random_state = 42, stratify = df['emb_id'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.to_csv('global_train.csv', index = False, sep = '|', encoding='latin-1')\n",
+    "df_val.to_csv('global_val.csv', index = False, sep='|', encoding = 'latin-1')"
    ]
   },
   {
@@ -194,10 +204,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_train.to_csv(out_train, index = False, sep = '|', encoding='latin-1')\n",
-    "df_val.to_csv(out_val, index = False, sep='|', encoding = 'latin-1')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
