fixing balanced rosana file

--- a/cpqd_aux/rf_express/Gerando csv nos formatos corretos para rosana carlos e adriana.ipynb
+++ b/cpqd_aux/rf_express/Gerando csv nos formatos corretos para rosana carlos e adriana.ipynb
@@ -26072,7 +26072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -26158,7 +26158,7 @@
        "4         tecle cancela para encerrar as operações .       1       a_pool  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26179,93 +26179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>wav_path</th>\n",
-       "      <th>text</th>\n",
-       "      <th>emb_id</th>\n",
-       "      <th>style_target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
-       "      <td>tentou criar um reino unido e sustentável .</td>\n",
-       "      <td>rosana</td>\n",
-       "      <td>a_pool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
-       "      <td>com a qual cada um no país contará sobre o caso .</td>\n",
-       "      <td>rosana</td>\n",
-       "      <td>a_pool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
-       "      <td>são cientistas internacionais , de atlanta .</td>\n",
-       "      <td>rosana</td>\n",
-       "      <td>a_pool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
-       "      <td>nesta quarta , o cenário exibe o sol .</td>\n",
-       "      <td>rosana</td>\n",
-       "      <td>a_pool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
-       "      <td>o placar , hoje é para os amigos .</td>\n",
-       "      <td>rosana</td>\n",
-       "      <td>a_pool</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                             wav_path  \\\n",
-       "0   /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
-       "3   /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
-       "25  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
-       "39  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
-       "41  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
-       "\n",
-       "                                                 text  emb_id style_target  \n",
-       "0         tentou criar um reino unido e sustentável .  rosana       a_pool  \n",
-       "3   com a qual cada um no país contará sobre o caso .  rosana       a_pool  \n",
-       "25       são cientistas internacionais , de atlanta .  rosana       a_pool  \n",
-       "39             nesta quarta , o cenário exibe o sol .  rosana       a_pool  \n",
-       "41                 o placar , hoje é para os amigos .  rosana       a_pool  "
+       "(2283, 4)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26273,98 +26196,21 @@
    "source": [
     "rosana_train = rosana_train[(rosana_train_block_names == \"rf_selecionadas\") | (rosana_train_block_names == \"riqueza_fonetica\")]\n",
     "rosana_train['emb_id'] = 'rosana'\n",
-    "rosana_train.head()"
+    "rosana_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>wav_path</th>\n",
-       "      <th>text</th>\n",
-       "      <th>emb_id</th>\n",
-       "      <th>style_target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
-       "      <td>quer se reeleger sem conhecer nenhum bairro po...</td>\n",
-       "      <td>rosana</td>\n",
-       "      <td>a_pool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
-       "      <td>também em todo lugar tentam conter a inflação .</td>\n",
-       "      <td>rosana</td>\n",
-       "      <td>a_pool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
-       "      <td>pesquisa no japão acerca da democracia .</td>\n",
-       "      <td>rosana</td>\n",
-       "      <td>a_pool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
-       "      <td>o ninho de passarinhos está protegido contra a...</td>\n",
-       "      <td>rosana</td>\n",
-       "      <td>a_pool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...</td>\n",
-       "      <td>ver o bloco feliz nesse desfile .</td>\n",
-       "      <td>rosana</td>\n",
-       "      <td>a_pool</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                             wav_path  \\\n",
-       "5   /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
-       "9   /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
-       "13  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
-       "25  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
-       "40  /l/disk1/awstebas/data/TTS/vozes_sync/Rosana/9...   \n",
-       "\n",
-       "                                                 text  emb_id style_target  \n",
-       "5   quer se reeleger sem conhecer nenhum bairro po...  rosana       a_pool  \n",
-       "9     também em todo lugar tentam conter a inflação .  rosana       a_pool  \n",
-       "13           pesquisa no japão acerca da democracia .  rosana       a_pool  \n",
-       "25  o ninho de passarinhos está protegido contra a...  rosana       a_pool  \n",
-       "40                  ver o bloco feliz nesse desfile .  rosana       a_pool  "
+       "(260, 4)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26372,12 +26218,12 @@
    "source": [
     "rosana_val = rosana_val[(rosana_val_block_names == \"rf_selecionadas\") | (rosana_val_block_names == \"riqueza_fonetica\")]\n",
     "rosana_val['emb_id'] = 'rosana'\n",
-    "rosana_val.head()"
+    "rosana_val.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26387,7 +26233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -26473,7 +26319,7 @@
        "4   jãºnior , que investiga a guerra civil carioca .  adriana    t_animado  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26485,8 +26331,12 @@
     "adriana_neutral_train = pd.read_csv(\"../adriana_neutropool_train.csv\", delimiter = \"|\", encoding = 'latin-1')\n",
     "adriana_neutral_val = pd.read_csv(\"../adriana_neutropool_val.csv\", delimiter = \"|\", encoding = 'latin-1')\n",
     "\n",
+    "adriana_neutral_train = adriana_neutral_train[adriana_neutral_train['style_target'] == 't_neutro']\n",
+    "adriana_neutral_val = adriana_neutral_val[adriana_neutral_val['style_target'] == 't_neutro']\n",
+    "\n",
     "adriana_neutral_train['emb_id'] = 'adriana'\n",
     "adriana_neutral_val['emb_id'] = 'adriana'\n",
+    "\n",
     "adriana_train['emb_id'] = 'adriana'\n",
     "adriana_val['emb_id'] = 'adriana'\n",
     "\n",
@@ -26495,7 +26345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -26548,16 +26398,16 @@
        "      <td>t_neutro</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Adriana/...</td>\n",
-       "      <td>e a outra veio zerado .</td>\n",
-       "      <td>adriana</td>\n",
-       "      <td>a_pool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Adriana/...</td>\n",
        "      <td>em especial a petrobras .</td>\n",
+       "      <td>adriana</td>\n",
+       "      <td>t_neutro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>/l/disk1/awstebas/data/TTS/vozes_sync/Adriana/...</td>\n",
+       "      <td>subiram antes dos 30 dias de espionagem .</td>\n",
        "      <td>adriana</td>\n",
        "      <td>t_neutro</td>\n",
        "    </tr>\n",
@@ -26570,24 +26420,57 @@
        "0  /l/disk1/awstebas/data/TTS/vozes_sync/Adriana/...   \n",
        "1  /l/disk1/awstebas/data/TTS/vozes_sync/Adriana/...   \n",
        "2  /l/disk1/awstebas/data/TTS/vozes_sync/Adriana/...   \n",
-       "3  /l/disk1/awstebas/data/TTS/vozes_sync/Adriana/...   \n",
        "4  /l/disk1/awstebas/data/TTS/vozes_sync/Adriana/...   \n",
+       "6  /l/disk1/awstebas/data/TTS/vozes_sync/Adriana/...   \n",
        "\n",
        "                                                text   emb_id style_target  \n",
        "0  nosso desejo ã© que envelheã§amos felizes e em...  adriana     t_neutro  \n",
        "1  em minas gerais , a temperatura cairã¡ e deve ...  adriana     t_neutro  \n",
        "2      as fã£s o chamam carinhosamente de belezura .  adriana     t_neutro  \n",
-       "3                            e a outra veio zerado .  adriana       a_pool  \n",
-       "4                          em especial a petrobras .  adriana     t_neutro  "
+       "4                          em especial a petrobras .  adriana     t_neutro  \n",
+       "6          subiram antes dos 30 dias de espionagem .  adriana     t_neutro  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "adriana_neutral_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2305, 4)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adriana_neutral_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adriana_train.to_csv(\"adriana_train.csv\", index = False, sep = '|', encoding='latin-1')\n",
+    "adriana_val.to_csv(\"adriana_val.csv\", index = False, sep = '|', encoding='latin-1')\n",
+    "\n",
+    "adriana_neutral_train.to_csv(\"adriana_neutropool_train.csv\", index = False, sep = '|', encoding='latin-1')\n",
+    "adriana_neutral_val.to_csv(\"adriana_neutropool_val.csv\", index = False, sep = '|', encoding='latin-1')\n"
    ]
   },
   {
