--- a/cpqd_aux/rf_express/Gerando csv nos formatos corretos para rosana carlos e adriana.ipynb
+++ b/cpqd_aux/rf_express/Gerando csv nos formatos corretos para rosana carlos e adriana.ipynb
@@ -26063,6 +26063,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['neutro'], dtype=object)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['style_target'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
@@ -26072,7 +26092,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -26158,7 +26185,7 @@
        "4         tecle cancela para encerrar as operações .       1       a_pool  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26179,7 +26206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -26188,7 +26215,7 @@
        "(2283, 4)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26201,7 +26228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -26210,7 +26237,7 @@
        "(260, 4)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26219,6 +26246,46 @@
     "rosana_val = rosana_val[(rosana_val_block_names == \"rf_selecionadas\") | (rosana_val_block_names == \"riqueza_fonetica\")]\n",
     "rosana_val['emb_id'] = 'rosana'\n",
     "rosana_val.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['a_pool'], dtype=object)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rosana_train['style_target'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['a_pool'], dtype=object)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rosana_val['style_target'].unique()"
    ]
   },
   {
