fixing speaker embedding dim

--- a/cpqd_aux/rf_express/Gerando csv nos formatos corretos para rosana carlos e adriana.ipynb
+++ b/cpqd_aux/rf_express/Gerando csv nos formatos corretos para rosana carlos e adriana.ipynb
@@ -26002,7 +26002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -26011,7 +26011,7 @@
        "(3709, 4)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26022,13 +26022,23 @@
     "block_names = [block.split('/')[9] for block in df['wav_path'].values]\n",
     "block_names = np.array(block_names)\n",
     "\n",
+    "\n",
     "df = df[(df['emb_id'].isin(['adriana','carlos'])) & (block_names == \"riqueza_fonetica\")]\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['style_target'] = 't_neutro'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26037,7 +26047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -26046,7 +26056,7 @@
        "(44, 4)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26063,27 +26073,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['neutro'], dtype=object)"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df['style_target'].unique()"
+    "df['style_target'] = 't_neutro'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26099,7 +26098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -26185,7 +26184,7 @@
        "4         tecle cancela para encerrar as operações .       1       a_pool  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26206,7 +26205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -26215,7 +26214,7 @@
        "(2283, 4)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26228,7 +26227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -26237,7 +26236,7 @@
        "(260, 4)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26250,7 +26249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -26259,7 +26258,7 @@
        "array(['a_pool'], dtype=object)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26270,7 +26269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -26279,7 +26278,7 @@
        "array(['a_pool'], dtype=object)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26290,7 +26289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26300,7 +26299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -26386,7 +26385,7 @@
        "4   jãºnior , que investiga a guerra civil carioca .  adriana    t_animado  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26412,7 +26411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -26498,7 +26497,7 @@
        "6          subiram antes dos 30 dias de espionagem .  adriana     t_neutro  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26509,7 +26508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -26518,7 +26517,7 @@
        "(2305, 4)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26529,7 +26528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26539,6 +26538,13 @@
     "adriana_neutral_train.to_csv(\"adriana_neutropool_train.csv\", index = False, sep = '|', encoding='latin-1')\n",
     "adriana_neutral_val.to_csv(\"adriana_neutropool_val.csv\", index = False, sep = '|', encoding='latin-1')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
